--- a/BaseballTour/mainwindow.ui
+++ b/BaseballTour/mainwindow.ui
@@ -35,7 +35,7 @@
        <rect>
         <x>20</x>
         <y>130</y>
-        <width>171</width>
+        <width>201</width>
         <height>31</height>
        </rect>
       </property>
@@ -45,7 +45,7 @@
        <rect>
         <x>20</x>
         <y>200</y>
-        <width>171</width>
+        <width>201</width>
         <height>31</height>
        </rect>
       </property>
@@ -55,7 +55,7 @@
        <rect>
         <x>20</x>
         <y>102</y>
-        <width>47</width>
+        <width>121</width>
         <height>21</height>
        </rect>
       </property>
@@ -68,7 +68,7 @@
        <rect>
         <x>20</x>
         <y>175</y>
-        <width>81</width>
+        <width>151</width>
         <height>21</height>
        </rect>
       </property>
@@ -102,7 +102,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/baseball-diamond-outline.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/baseball-diamond-outline.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -140,7 +140,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/baseball-pic.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/baseball-pic.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -263,7 +263,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/wrench-outline.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/wrench-outline.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -277,7 +277,7 @@
        <rect>
         <x>80</x>
         <y>10</y>
-        <width>161</width>
+        <width>181</width>
         <height>41</height>
        </rect>
       </property>
@@ -293,7 +293,7 @@
        <rect>
         <x>410</x>
         <y>120</y>
-        <width>217</width>
+        <width>331</width>
         <height>80</height>
        </rect>
       </property>
@@ -358,7 +358,7 @@ background-color: rgb(211, 211, 211);</string>
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/Fenway-park.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/Fenway-park.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -432,7 +432,7 @@ background-color: rgb(211, 211, 211);</string>
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/graph-outline.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/graph-outline.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -467,7 +467,7 @@ background-color: rgb(211, 211, 211);</string>
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/img/ball-bat-helmet.png</pixmap>
+       <pixmap resource="resources.qrc">:/img/ball-bat-helmet.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>true</bool>
@@ -482,7 +482,7 @@ background-color: rgb(211, 211, 211);</string>
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -561,6 +561,8 @@ background-color: rgb(211, 211, 211);</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
